2004-05-06 Andrew L. Janke  <rotor@cmr.uq.edu.au>

   * Added README
   * replaced erky for_less MACRO with real code

2004-04-22 Andrew L. Janke  <rotor@cmr.uq.edu.au>

   * Inital GNU'ish entry